--- a/calendar.html
+++ b/calendar.html
@@ -12,8 +12,8 @@
     <div class="calendar__container">
         <div class="header">
             <h1>Calendar</h1>
-            <input type="text" list="names" class="header__field" placeholder="all members">
-            <datalist id="names"></datalist>
+            <!-- <input type="text" list="names" class="header__field" placeholder="all members"> -->
+            <select id="names" class="header__field"></select>
             <button type="button" class="header__button"><a href="./srs/create-event.html">New event +</a></button>
         </div>
         <div class="calendar">
