--- a/srs/create-event.html
+++ b/srs/create-event.html
@@ -16,19 +16,19 @@
         </div>
         <div class="event__users field">
             <label for="event__users" class="field__name">Partisipants:</label>
-            <input type="text" id="event__users" name="event__users" list="users" class="field__data">
-            <datalist id="users"></datalist>
+            <!-- <selec type="text" id="event__users" name="event__users" list="users" class="field__data"> -->
+            <select id="event__users"></select>
         </div>
         <div class="event__day field">
             <label for="event__day" class="field__name">Day:</label>
-            <input type="text" id="event__day" name="event__day" list="days" class="field__data">
-            <datalist id="days"></datalist>
+            <!-- <input type="text" id="event__day" name="event__day" list="days" class="field__data"> -->
+            <select id="event__day"></select>
         </div>
         <div class="event__time field" >
             <label for="event__time" class="field__name">Time:</label>
-            <input type="text" id="event__time" name="event__time" list="times" class="field__data">
-            <datalist id="times">
-            </datalist>
+            <!-- <input type="text" id="event__time" name="event__time" list="times" class="field__data"> -->
+            <select id="event__time">
+            </select>
         </div>
         <div class="buttons">
             <button type="button" class="event__button buttonCancel">Cansel</button>
