--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.scss">
+    <link rel="stylesheet" href="./srs/scss/style.scss">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <h1>Calendar</h1>
             <!-- <input type="text" list="names" class="header__field" placeholder="all members"> -->
             <select id="names" class="header__field"></select>
-            <button type="button" class="header__button"><a href="./srs/create-event.html">New event +</a></button>
+            <button type="button" class="header__button"><a href="./srs/html/create-event.html">New event +</a></button>
         </div>
         <div class="calendar">
             <table class="calendar__table table">
