--- a/calendar.html
+++ b/calendar.html
@@ -12,9 +12,9 @@
     <div class="calendar__container">
         <div class="header">
             <h1>Calendar</h1>
-            <!-- <input type="text" list="names" class="header__field" placeholder="all members"> -->
             <select id="names" class="header__field"></select>
-            <button type="button" class="header__button"><a href="./srs/html/create-event.html">New event +</a></button>
+            <button type="button" class="header__button">New event +</button>
+            <a href="./srs/html/create-event.html" id="linkToCreatePage"></a>
         </div>
         <div class="calendar">
             <table class="calendar__table table">
