--- a/srs/html/create-event.html
+++ b/srs/html/create-event.html
@@ -19,19 +19,7 @@
         </div>
         <div class="event__users field">
             <label for="event__users" class="field__name">Partisipants:</label>
-            <div class="select" id="select-1">
-                <div class="select__backdrop"></div>
-                <div class="select__fieldWrap" data-select="backdrop"><p class="select__field"></p></div> 
-                <p class="select__trigger"></p> 
-                <div class="select__dropdown">
-                  <ul class="select__items"></ul>
-                </div>
-              </div>
-
-        </div>
-        <div class="event__users field">
-            <label for="event__users" class="field__name">Partisipants2:</label>
-            <div id="event__users2" class="field__data"></div>
+            <div id="event__users" class="field__data"></div>
         </div>
         <div class="event__day field">
             <label for="event__day" class="field__name">Day:</label>
@@ -49,7 +37,7 @@
         </div>
     </div>
 
-    <script src="../js/create-event.js"></script>
     <script src="../js/multiselect.js"></script>
+    <script src="../js/create-event.js"></script>
 </body>
 </html>
