--- a/srs/html/create-event.html
+++ b/srs/html/create-event.html
@@ -15,7 +15,7 @@
             <input type="text" id="event__name" name="event__name" class="field__data">
         </div>
         <div class="event__users field">
-            <label for="event__users" class="field__name">Partisipants:</label>
+            <p for="event__users" class="field__name">Partisipants:</p>
             <div class="select" id="select-1">
                 <div class="select__backdrop"></div>
                 <div class="select__fieldWrap" data-select="backdrop"><p class="select__field"></p></div> 
@@ -36,8 +36,8 @@
             </select>
         </div>
         <div class="buttons">
-            <button type="button" class="event__button buttonCancel">Cansel</button>
-            <button type="button" class="event__button buttonOk">Ok</button>
+            <button type="button" class="event__button buttonCancel">Cancel</button>
+            <button type="button" class="event__button buttonOk">Create</button>
             <a href="../../calendar.html" class="homeWay"></a>
         </div>
     </div>
