--- a/srs/html/create-event.html
+++ b/srs/html/create-event.html
@@ -19,7 +19,7 @@
         </div>
         <div class="event__users field">
             <label for="event__users" class="field__name">Partisipants:</label>
-            <div id="event__users" class="field__data"></div>
+            <div id="event__users"  class="field__data field__data_multiselect"></div>
         </div>
         <div class="event__day field">
             <label for="event__day" class="field__name">Day:</label>
