refactored code structure

--- a/srs/calendar.html
+++ b/srs/calendar.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
           integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
           crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./srs/scss/style.scss">
+    <link rel="stylesheet" href="scss/style.scss">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <h1>Calendar</h1>
         <select id="names" class="header__field"></select>
         <button type="button" class="header__button">New event +</button>
-        <a href="./srs/html/create-event.html" id="linkToCreatePage"></a>
+        <a href="html/create-event.html" id="linkToCreatePage"></a>
     </div>
     <div class="calendar">
         <table class="calendar__table table">
@@ -25,7 +25,7 @@
             </thead>
             <tbody class="table__body"></tbody>
     </div>
-    <script src="./index.js"></script>
-    <script src="./srs/js/dictionaries.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/dictionaries.js"></script>
 </body>
 </html>
