--- a/srs/html/create-event.html
+++ b/srs/html/create-event.html
@@ -33,7 +33,7 @@
         <div class="buttons">
             <button type="button" class="event__button buttonCancel">Cansel</button>
             <button type="button" class="event__button buttonOk">Ok</button>
-            <a href="../../calendar.html" class="homeWay"></a>
+            <a href="../calendar.html" class="homeWay"></a>
         </div>
     </div>
 
