--- a/srs/create-event.html
+++ b/srs/create-event.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../scss/style.scss">
-    <link rel="stylesheet" href="../scss/multiselect.scss">
+    <link rel="stylesheet" href="./scss/style.scss">
+    <link rel="stylesheet" href="./scss/multiselect.scss">
     <title>Document</title>
 </head>
 <body>
@@ -33,11 +33,11 @@
         <div class="buttons">
             <button type="button" class="event__button buttonCancel">Cansel</button>
             <button type="button" class="event__button buttonOk">Ok</button>
-            <a href="../calendar.html" class="homeWay"></a>
+            <a href="./calendar.html" class="homeWay"></a>
         </div>
     </div>
 
-    <script src="../js/multiselect.js"></script>
-    <script src="../js/create-event.js"></script>
+    <script src="./js/multiselect.js"></script>
+    <script src="./js/create-event.js"></script>
 </body>
 </html>
