--- a/srs/calendar.html
+++ b/srs/calendar.html
@@ -16,7 +16,7 @@
         <h1>Calendar</h1>
         <select id="names" class="header__field"></select>
         <button type="button" class="header__button">New event +</button>
-        <a href="html/create-event.html" id="linkToCreatePage"></a>
+        <a href="./create-event.html" id="linkToCreatePage"></a>
     </div>
     <div class="calendar">
         <table class="calendar__table table">
